tests/ui/binding_type_mismatch.stderr
Error [E0108]: `n` says it holds Int (a whole number), but the value is String (text)
  --> tests/ui/binding_type_mismatch.jet:2:18
    |
  2 |     val n: Int = "hi";
    |                  ^^^^
 Why: the type written after `:` must match the value
 Fix: use Int (a whole number) here
