tests/ui/binding_type_mismatch.lex
fn main() {
    val n: Int = "hi";
    print(n);
}
